# audio_compass

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: TTSConfig.cfg  tts_config.yaml
launch/: audio_ros_bridge.launch  speech_generator.launch  speech_recognizer.launch
msg/: SpeechDirection.msg
scripts/: audio_ros_bridge.py  install.sh  list_voices.py  speech_generator_node.py  speech_recognizer_node.py  tts_client.py
scripts/test/: test_speech_recognition.py  test_tts_service.py
src/speech_generator/: __init__.py  language_detector.py  speech_generator.py  speech_generator_backup.py  tts_cache.py  tts_engine.py
src/speech_recognizer/: __init__.py  base_recognizer.py  google_speech_recognizer.py  vosk_speech_recognizer.py  whisper_speech_recognizer.py
srv/: TextToSpeech.srv
