<?xml version="1.0"?>
<package format="2">
    <name>audio_compass</name>
    <version>0.1.0</version>
    <description>ROS package for speech recognition and generation</description>
    <maintainer email="hoshizoranihon@gmail.com">XKHoshizora</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>actionlib</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>move_base_msgs</depend>
    <depend>wp_nav_controller</depend>
    <depend>dynamic_reconfigure</depend>

    <depend>message_generation</depend>
    <exec_depend>message_runtime</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
